# franka_test_ros

./: README.md
franka_kitting_controller/: CMakeLists.txt  README.md  grasp_force_ramp_implementation_prompt_v3.md  kitting_controller_plugins.xml  package.xml
franka_kitting_controller/config/: kitting_logger.yaml  kitting_phase2_logger.yaml  kitting_state_controller.yaml
franka_kitting_controller/include/franka_kitting_controller/: kitting_logger.h  kitting_phase2_logger.h  kitting_state_controller.h
franka_kitting_controller/launch/: kitting_logger.launch  kitting_phase2.launch  kitting_state_controller.launch
franka_kitting_controller/msg/: KittingGripperCommand.msg  KittingState.msg
franka_kitting_controller/src/: kitting_commands.cpp  kitting_force_ramp.cpp  kitting_gripper.cpp  kitting_logger.cpp  kitting_phase2_logger.cpp  kitting_state_controller.cpp
franka_kitting_controller/test/: kitting_integration_test.cpp  kitting_state_machine_test.cpp  kitting_unit_test.cpp  main.cpp  test_helpers.h
franka_pick_place_controller/: CMakeLists.txt  README.md  package.xml
franka_pick_place_controller/launch/: pick_place.launch
franka_pick_place_controller/scripts/: panda_pick_place_gazebo_no_moveit.py
kitting_bags/object0/trial_001/: metadata.yaml  trial_001_signals_state_statistics.csv
kitting_bags/object0/trial_002/: analyze_signals.py  metadata.yaml  trial_002_signals_state_statistics.csv
kitting_bags/object0/trial_003/: metadata.yaml  trial_003_signals_state_statistics.csv
kitting_bags/object0/trial_004/: metadata.yaml  trial_004_signals_state_statistics.csv
kitting_bags/object0/trial_005/: metadata.yaml  trial_005_signals_state_statistics.csv
kitting_bags/object0/trial_006/: metadata.yaml  trial_006_signals_state_statistics.csv
kitting_bags/object1/trial_001/: metadata.yaml  trial_001_signals_state_statistics.csv
kitting_bags/object1/trial_002/: metadata.yaml  trial_002_signals_state_statistics.csv
kitting_bags/object1/trial_003/: metadata.yaml  trial_003_signals_state_statistics.csv
kitting_bags/object1/trial_004/: analyze_signals.py  metadata.yaml  trial_004_signals_state_statistics.csv
kitting_bags/object1/trial_005/: metadata.yaml  trial_005_signals_state_statistics.csv
kitting_bags/object1/trial_006/: analyze_signals.py  metadata.yaml  trial_006_signals_state_statistics.csv
kitting_bags/object2/trial_001/: analyze_signals.py  metadata.yaml  trial_001_signals_state_statistics.csv
kitting_bags/object2/trial_002/: metadata.yaml  trial_002_signals_state_statistics.csv
kitting_bags/object2/trial_003/: metadata.yaml  trial_003_signals_state_statistics.csv
kitting_bags/object3/trial_002/: metadata.yaml  trial_002_signals_state_statistics.csv
kitting_bags/object3/trial_003/: metadata.yaml  trial_003_signals_state_statistics.csv
kitting_bags/object3/trial_005/: analyze_signals.py  metadata.yaml  trial_005_signals_state_statistics.csv
kitting_bags/object3/trial_006/: metadata.yaml  trial_006_signals_state_statistics.csv
kitting_bags/object3/trial_007/: analyze_signals.py  metadata.yaml  trial_007_signals_state_statistics.csv
kitting_bags/object4/trial_001/: metadata.yaml  trial_001_signals_state_statistics.csv
kitting_bags/object4/trial_003/: analyze_signals.py  metadata.yaml  trial_003_signals_state_statistics.csv
kitting_bags/object4/trial_004/: metadata.yaml  trial_004_signals_state_statistics.csv
kitting_bags/object4/trial_005/: metadata.yaml  trial_005_signals_state_statistics.csv
kitting_bags/object4/trial_006/: metadata.yaml  trial_006_signals_state_statistics.csv
kitting_bags/object5/trial_001/: metadata.yaml  trial_001_signals_state_statistics.csv
kitting_bags/object5/trial_002/: metadata.yaml  trial_002_signals_state_statistics.csv
kitting_bags/object6/trial_001/: metadata.yaml
kitting_bags/object6/trial_002/: metadata.yaml
kitting_bags/object6/trial_003/: metadata.yaml
kitting_bags/object6/trial_004/: metadata.yaml
kitting_bags/object6/trial_005/: metadata.yaml
kitting_bags/object6/trial_006/: metadata.yaml
kitting_bags/object6/trial_007/: metadata.yaml
kitting_bags/object7/trial_001/: metadata.yaml
kitting_bags/object7/trial_002/: metadata.yaml
kitting_bags/object7/trial_003/: metadata.yaml
kitting_bags/object7/trial_004/: metadata.yaml
kitting_bags/object8/trial_001/: metadata.yaml
kitting_bags/object8/trial_002/: metadata.yaml
kitting_bags/object8/trial_003/: metadata.yaml
sms_cusum/: INTEGRATION_GUIDE.md  README.md
sms_cusum/cpp/include/sms_cusum/: adaptive_baseline.hpp  cusum.hpp  secure_grasp.hpp  sms_cusum.hpp  wrench_slope.hpp
sms_cusum/cpp/test/: test_sms_cusum_cpp.cpp
sms_cusum/python/: __init__.py  adaptive_baseline.py  config.py  cusum.py  plot_results.py  secure_grasp.py  sms_cusum.py  tune_parameters.py  validate_offline.py  wrench_slope.py
sms_cusum/tests/: test_baseline.py  test_cusum.py  test_secure_grasp.py  test_sms_cusum.py  test_wrench_slope.py
