<?xml version="1.0"?>
<package format="2">
  <name>franka_kitting_controller</name>
  <version>0.1.0</version>
  <description>Passive read-only controller that publishes comprehensive robot state data for kitting task development on the Franka Panda.</description>
  <maintainer email="aanuolakunle@gmail.com">Aanu Olakunle</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>franka_hw</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>topic_tools</depend>
  <depend>actionlib</depend>
  <depend>franka_gripper</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/kitting_controller_plugins.xml"/>
  </export>
</package>
