<?xml version="1.0"?>
<package format="2">
  <name>franka_pick_place_controller</name>
  <version>0.1.0</version>
  <description>Gazebo-only pick-and-place controller for Franka Panda using joint trajectory actions (no MoveIt).</description>
  <maintainer email="aanuolakunle@todo.todo">Aanu Olakunle</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>franka_gazebo</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
